force-app/main/default/objects/ContractManagement__c/ContractManagement__c.object-meta.xml
<CustomObject>
    <label>契約管理</label>
    <nameField>
        <displayFormat>契約管理-{000000}</displayFormat>
        <label>契約管理</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>