force-app/main/default/objects/ContractManagement__c/fields/AcceptanceFlag__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFlag__c</fullName>
    <formula>Item__r.Acceptance_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>検収対象</label>
    <type>Checkbox</type>
</CustomField>