force-app/main/default/objects/ContractManagement__c/fields/AccountID18__c.field-meta.xml
<CustomField>
    <fullName>AccountID18__c</fullName>
    <formula>CustomContract__r.AccountID18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ID18桁</label>
    <type>Text</type>
</CustomField>