force-app/main/default/objects/ContractManagement__c/fields/ApplicationFlg__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】申請フラグ</label>
    <type>Checkbox</type>
</CustomField>