force-app/main/default/objects/ContractManagement__c/fields/ApprovedFlg__c.field-meta.xml
<CustomField>
    <fullName>ApprovedFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】承認済みフラグ</label>
    <type>Checkbox</type>
</CustomField>