force-app/main/default/objects/ContractManagement__c/fields/Churn__c.field-meta.xml
<CustomField>
    <fullName>Churn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約フラグ</label>
    <type>Checkbox</type>
</CustomField>