force-app/main/default/objects/ContractManagement__c/fields/ChurnBtn__c.field-meta.xml
<CustomField>
    <fullName>ChurnBtn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約ボタン押下フラグ</label>
    <type>Checkbox</type>
</CustomField>