force-app/main/default/objects/ContractManagement__c/fields/ContractChurn__c.field-meta.xml
<CustomField>
    <fullName>ContractChurn__c</fullName>
    <formula>CustomContract__r.Churn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約解約フラグ</label>
    <type>Checkbox</type>
</CustomField>