force-app/main/default/objects/ContractManagement__c/fields/ContractID18__c.field-meta.xml
<CustomField>
    <fullName>ContractID18__c</fullName>
    <formula>CustomContract__r.ID18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約ID18桁</label>
    <type>Text</type>
</CustomField>