force-app/main/default/objects/ContractManagement__c/fields/ContractRetentionMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractRetentionMonth__c</fullName>
    <label>契約終了月</label>
    <type>Date</type>
</CustomField>