force-app/main/default/objects/ContractManagement__c/fields/ContractStartMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractStartMonth__c</fullName>
    <label>契約開始月</label>
    <type>Date</type>
</CustomField>