force-app/main/default/objects/ContractManagement__c/fields/CustomContract__c.field-meta.xml
<CustomField>
    <fullName>CustomContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>契約管理</relationshipLabel>
    <relationshipName>ContractManagements</relationshipName>
    <type>Lookup</type>
</CustomField>