force-app/main/default/objects/ContractManagement__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>商品ファミリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>