force-app/main/default/objects/ContractManagement__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>契約管理</relationshipLabel>
    <relationshipName>ContractManagements</relationshipName>
    <type>Lookup</type>
</CustomField>