force-app/main/default/objects/ContractManagement__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <label>商談商品ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>