force-app/main/default/objects/ContractManagement__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>(YEAR(ContractRetentionMonth__c) - YEAR(ContractStartMonth__c))*12 + (MONTH(ContractRetentionMonth__c) - MONTH(ContractStartMonth__c)) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>期間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>