force-app/main/default/objects/ContractManagement__c/fields/Product2ID18__c.field-meta.xml
<CustomField>
    <fullName>Product2ID18__c</fullName>
    <formula>Item__r.Id18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商品ID18桁</label>
    <type>Text</type>
</CustomField>