force-app/main/default/objects/ContractManagement__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>サブスクリプション対象</label>
    <type>Checkbox</type>
</CustomField>