force-app/main/default/objects/ContractManagement__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>販売価格（値引き後）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>