force-app/main/default/objects/ContractManagement__c/fields/ValidFlagCustom__c.field-meta.xml
<CustomField>
    <fullName>ValidFlagCustom__c</fullName>
    <formula>IF
/*onetimeが trueの時はfalse*/
(Item__r.OneTime__c =true,
false,
/*TODAYが終了日をすぎていたらfalse*/
IF(
 ContractRetentionMonth__c  &lt; today(),
false,
/*TODAYが開始日を過ぎていたらtrue*/
  IF (
   ContractStartMonth__c  &lt;=  today(),
   true,
false
     ) 
   )
)</formula>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>