force-app/main/default/objects/ContractManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApplicationFlg__c</columns>
    <columns>ApprovedFlg__c</columns>
    <columns>Churn__c</columns>
    <columns>ChurnBtn__c</columns>
    <columns>ContractRetentionMonth__c</columns>
    <columns>ContractStartMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>