force-app/main/default/objects/ContractManagement__c/listViews/GM_ContractManagement.listView-meta.xml
<ListView>
    <fullName>GM_ContractManagement</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>